<resources>
    <string name="app_name">Calculadora Numeros Primos</string>
    <string name="encabezado">CALCULADORA DE NÚMEROS PRIMOS</string>
    <string name="texto_ejemplo">Introduce que número primo quieres calcular. Por ejemplo, si deseas saber el sexto número primo, pon el número 6 y dale a calcular. Te dirá que el sexto número primo es el 11</string>
    <string name="edit_text">Posicion</string>
    <string name="posicion">Posicion</string>
    <string name="calcular">Calcular</string>
</resources>