<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="730dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtEncabezado"
            android:layout_width="328dp"
            android:layout_height="70dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="120dp"
            android:gravity="center"
            android:text="@string/encabezado"
            android:textColor="#259330"
            android:textSize="24sp"
            tools:textStyle="bold" />

        <TextView
            android:id="@+id/txtEnunciado"
            android:layout_width="268dp"
            android:layout_height="106dp"
            android:layout_marginStart="65dp"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="54dp"
            android:layout_marginRight="54dp"
            android:gravity="center"
            android:text="@string/texto_ejemplo"
            android:textColor="#288E16"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTxtPosicion"
            android:layout_width="247dp"
            android:layout_height="51dp"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="50dp"
            android:autofillHints="@string/edit_text"
            android:ems="10"
            android:hint="@string/posicion"
            android:inputType="textPersonName"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="10dp"
            android:text="@string/calcular"
            app:backgroundTint="#FF5722"
            android:onClick="resultado"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/txtResultado"
            android:layout_width="200dp"
            android:layout_height="144dp"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:visibility="invisible"
            android:text="" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>